ensure inline forms  form groupsare vertically aligned to bottom

--- a/less/forms.less
+++ b/less/forms.less
@@ -41,6 +41,7 @@ input, textarea {
   display: inline-block;
   width: @input-width;
   margin-left: @gutter-width / 4;
+  vertical-align: bottom;
 
   &.form-group-submit {
     width: auto;
